Use GigaMap instead of JDK Collections